part_2/conf/test_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellokub
  labels:
    app: hellokubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hellokub
  template:
    metadata:
      labels:
        app: hellokub
    spec:
      containers:
      - name: hello-app-kubernetes
        image: paulbouwer/hello-kubernetes:latest
        ports:
        - containerPort: 8080
