part_2/conf/app1.yaml
---
#SERVICE START see KUBERNETES REFERENCE SERVICE API
apiVersion: v1
kind: Service
metadata:
    name: nginxdemo-service
spec:
    #select pods where 'app:' field matches with this service app field
    selector:
        app: nginxdemo-pod
    ports:
      - protocol: TCP
        # Service listening port
        port: 80
        # Listening pod's container port
        targetPort: 8080
#SERVICE END
---
#DEPLOYEMENT START
#Version du kubernetesAPI used
apiVersion: apps/v1
#type of Kubernetes object (Pods, Service, deployment ..)
kind: Deployment
#Data that identifies the OBJECT
    #name= Objectname
    #UID (Optional)
    #namespace (Optional)
    #labels = (Optional?) map of key:value (string) to organize scopes
metadata:
  name: nginxdemo-deploy
  #labels:
  #  app: hellokubernetes
#Data about all the PODS
#(required) Spec = desired state of the object.
spec:
#Replicas = nb of similar pods to create
  replicas: 1
  selector:
    matchLabels:
      app: nginxdemo-pod
#(required) Template = describe the pods 
  template:
    metadata:
      labels:
        app: nginxdemo-pod
#POD container spec
    spec:
      containers:
      - name: nginxdemo-container
        image: nginxdemos/hello:latest
        ports:
        - containerPort: 8080
#DEPLOYEMENT END
