part_2/conf/app2.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: simple-http-service
spec:
    selector:
        app: simple-http-pod
    ports:
      - protocol: TCP
        port: 80
        targetPort: 8080
---


#Version du kubernetesAPI used
apiVersion: apps/v1
#type of Kubernetes object (Pods, Service, deployment ..)
kind: Deployment
#Data that identifies the OBJECT
    #name= Objectname
    #UID (Optional)
    #namespace (Optional)
    #labels = (Optional?) map of key:value (string) to organize scopes
metadata:
  name: simple-http-deploy
  #labels:
  #  app: hellokubernetes
#Data about all the PODS
#(required) Spec = desired state of the object.
spec:
#Replicas = nb of similar pods to create
  replicas: 3
  selector:
    matchLabels:
      app: simple-http-pod
#(required) Template = describe the pods 
  template:
    metadata:
      labels:
        app: simple-http-pod
#POD spec
    spec:
      containers:
      - name: simple-http-container
        image: strm/helloworld-http:latest
        ports:
        - containerPort: 8080
