part_2/conf/app3.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: app3-hellokubernets-service
spec:
    selector:
        app: hellokubernetes-pod
    ports:
      - protocol: TCP
        port: 80
        targetPort: 8080
---

#Version du kubernetesAPI used
apiVersion: apps/v1
#type of Kubernetes object (Pods, Service, deployment ..)
kind: Deployment
#Data that identifies the OBJECT
    #name= Objectname
    #UID (Optional)
    #namespace (Optional)
    #labels = (Optional?) map of key:value (string) to organize scopes
metadata:
  name: hellokubernetes-deploy
  #labels:
  #  app: hellokubernetes
#Data about all the PODS
#(required) Spec = desired state of the object.
spec:
#Replicas = nb of similar pods to create
  replicas: 1
  selector:
    matchLabels:
      app: hellokubernetes-pod
#(required) Template = describe the pods 
  template:
    metadata:
      labels:
        app: hellokubernetes-pod
#POD spec
    spec:
      containers:
      - name: hellokubernetes-container
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
