part_2/conf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
spec:
    defaultBackend:
        service:
            name: app3-hellokubernetes-service
            port:
                number: 80
    rules:
        - host: app1.com
          http:
              paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: app1-nginxdemo-service
                        port:
                            number: 80
        - host: app2.com
          http:
              paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: app2-simple-http-service
                        port:
                            number: 80
        - host: app3.com
          http:
              paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: app3-hellokubernetes-service
                        port:
                            number: 80
